data/derived/comb/progs/unify/prog5500.ml.out
Characters 71-73:
  List.fold_left f base fs;;
                        ^^
Error: This expression has type int but an expression was expected of type
         'a list
